改变了背景颜色和网站图标，将图片换为免费图片

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -8,3 +8,17 @@
     src: url('/fonts/SanJiXingKaiJianTi-Cu-2.ttf')format('truetype');
     font-display: swap;
 }
+
+body {
+    background-color: #dfd8be;
+    color: black;
+}
+
+header {
+    background-color: #F0EAD6;
+}
+
+nav.breadcrumb-container {
+    // border: 2px solid #2B307A;
+    background-color: #dfd8be;
+}
